# CrewAI_Video_Marketing_Team

./: .gitignore  README.md  blog_post_outline.md  email_outline.md  pyproject.toml
src/video_content_maker/: crew.py  main.py
src/video_content_maker/config/: agents.yaml  tasks.yaml
src/video_content_maker/tools/: brave_search.py
