[project]
name = "video_content_maker"
version = "0.1.0"
description = "video_content_maker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools] (>=0.114.0,<0.115.0)"
]

[project.scripts]
video_content_maker = "video_content_maker.main:run"
run_crew = "video_content_maker.main:run"
train = "video_content_maker.main:train"
replay = "video_content_maker.main:replay"
test = "video_content_maker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
